<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="add">Añadir</string>
    <string name="app_name">GoalScorer</string>
    <string name="away_team_example">Independiente\nMedellín</string>
    <string name="calendar">Calendario</string>
    <string name="country_league_example">Colombia</string>
    <string name="date_info">lun., 20 de sep.</string>
    <string name="description">Descripción del equipo</string>
    <string name="draw_example">2</string>
    <string name="email">Correo electrónico</string>
    <string name="email_example">crdavidch@outlook.com</string>
    <string name="empty_field">El campo no puede estar vacio</string>
    <string name="equipment">Equipo</string>
    <string name="favorite">Favorito</string>
    <string name="form_error">Debe digitar los campos requeridos</string>
    <string name="game_information">Información del juego</string>
    <string name="game_time">20:00</string>
    <string name="goals">+/-</string>
    <string name="goals_diff_example">14</string>
    <string name="goals_example">22-12</string>
    <string name="golas_diff">DG</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_team_example">Atlético Nacional</string>
    <string name="league">Liga</string>
    <string name="least_password">La contraseña debe tener minimo de 6 caracteres</string>
    <string name="login">Iniciar sesión</string>
    <string name="logout">Cerrar sesión</string>
    <string name="lose_example">1</string>
    <string name="lost">P</string>
    <string name="mail_match">Los correos no coinciden</string>
    <string name="must_register">Debe registrarse</string>
    <string name="name">Nombre</string>
    <string name="name_appp">GoalScorer</string>
    <string name="name_example">David Charo</string>
    <string name="name_league_example">Primera A Apertura - 1</string>
    <string name="name_referee_example">W. Mosquera</string>
    <string name="name_tv_chanel_example">WinSports</string>
    <string name="name_venue_example">Estadio Manuel Murillo Toro</string>
    <string name="password">Contraseña</string>
    <string name="password_error">Las contraseñas no son iguales</string>
    <string name="password_match">Las contraseñas no coinciden</string>
    <string name="played">J</string>
    <string name="played_exmaple">12</string>
    <string name="points">PTS</string>
    <string name="points_example">29</string>
    <string name="rank_example">10</string>
    <string name="referee">Árbitro</string>
    <string name="register">Registrar</string>
    <string name="register_new_account">Registar una nueva cuenta</string>
    <string name="repeat_password">Repita la contraseña</string>
    <string name="required_text">Campo requerido</string>
    <string name="round_league_example">Apertura - 1</string>
    <string name="score_example">1 - 0</string>
    <string name="score_info">-</string>
    <string name="season_league_example">2021</string>
    <string name="sport_info">Sport: %s</string>
    <string name="team">Equipo</string>
    <string name="team_name_example">Independiente Medellin</string>
    <string name="team_number">#</string>
    <string name="tied">E</string>
    <string name="tv_chanel">Canal de TV</string>
    <string name="unwanted_mail">Ingrese un correo electrónico como\nejemplo@gmail.com</string>
    <string name="venue">Estadio</string>
    <string name="win_example">9</string>
    <string name="won">G</string>
</resources>
